shared spec added

--- a/gc/CMakeLists.txt
+++ b/gc/CMakeLists.txt
@@ -9,9 +9,14 @@ set(GC_MINOR_VERSION 2.3)
 set(GC_SOURCE minfo.cpp
               garbagecollector.cpp)
 set(GC_HEADER gc_global.h
+              gc_shared.h
               minfo.h
               memorymanagement.h
               garbagecollector.h)
+
+if(WIN32)
+set(MEMMNGT_GC_LIB)
+endif(WIN32)
 
 set(CMAKE_CXX_FLAGS "-Wall -O3 -pedantic -s -std=c++0x")
 
