--- a/gc/CMakeLists.txt
+++ b/gc/CMakeLists.txt
@@ -17,6 +17,9 @@ set(GC_HEADER gc_global.h
               garbagecollector.h)
 
 set(CMAKE_CXX_FLAGS "-Wall -O3 -pedantic -s -std=c++0x")
+if(${GC_BUILD_OPT_THREAD})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+endif(${GC_BUILD_OPT_THREAD})
 
 add_library(${LIB} SHARED ${GC_SOURCE})
 set_target_properties(${LIB} PROPERTIES
